--- a/Curricuum.html
+++ b/Curricuum.html
@@ -3,7 +3,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum</title>
-    
+    <style>
+        .name {color: black;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </style>
 
 
 
