--- a/PassoDeDança.html
+++ b/PassoDeDança.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PASSO DE DANÇA</title>
+    <title>PASSO DE DANÇA!</title>
 </head>
 <body>
    <h1><b>PASSO DE DANÇA</b></h1>
