--- a/Formulario.html
+++ b/Formulario.html
@@ -40,6 +40,9 @@
 <label for="city">Cidade</label> <br>
 <input type="city" id="city" name="city"><br>
 
+<label for="cep">CEP</label> <br>
+<input type="number" id="cep" name="cep"><br>
+
 
 
 
